add prod mode